client/styles/main.sass
@import 'reset'
@import 'nav'
@import 'articleList'
@import 'articleViewPage'
@import 'articleCreate'
@import 'articleEdit'
@import 'ticketPage'
@import 'ticketCreate'
@import 'login'
@import 'dashboard'
@import 'profile'

.card
  border-radius: 3px
  background: #fff
  padding: 24px
  box-shadow: 0 2px 2px 2px rgba(0,0,0,0.3)

.ticket-page-form
  width: 560px
  @extend .card

.ticket-page-container
  background: #eee
  margin: 0

.navbar
  margin-bottom: 0

.homepageBackground
  position: fixed
  z-index: 5
  height: 100vh
  width: 100vw
  left: 0
  top: 0
  background-image: url('../images/homepage4.jpg')
  background-size: cover

.centerFlexHomePage
  height: 100vh
  width: 100vw
  display: flex
  align-items: center
  justify-content: center
  flex-direction: column

.enter-app-button
  height: 32px
  border: 1px solid $slate
  line-height: 32px
  padding: 0 8px
  text-transform: uppercase
  color: $slate
  text-decoration: none
  border-radius: 3px
  margin: 48px

